# superman

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
camera/: Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h
dummy/: dummy  dummy.cpp
manager/: Manager.cpp
objectdetection/: ObjectDetection.cpp
positionestimation/: PositionEstimation.cpp
